Support for hapi joi

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "joi-to-swagger",
+  "name": "renatoargh-joi-to-swagger",
   "version": "3.3.0",
   "description": "",
   "main": "index.js",
